<?xml version="1.0"?>
<package format="3">
  <name>nav_goal_publisher</name>
  <version>0.0.0</version>
  <description>A package for converting GPS goals to ROS2 PoseStamped messages</description>
  <maintainer email="kccool966@gmail.com">group1</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
